--- a/dynamic_report.Rmd
+++ b/dynamic_report.Rmd
@@ -1,167 +1,137 @@
 ---
-title: "stats2201B"
-output: html_document
-date: "2026-02-20"
+title: Student feedback on lab tasks
+output: html_fragment
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE, error=FALSE)
+
+# I like to load packages in the setup chunk
+library(tidyverse)
+library(tidytext)
 ```
 
-## R 
+```{css echo=FALSE}
+body {
+    font-size: 12pt;
+    font-family: Courier;
+    padding: 20px 100px 20px 100px;
+}
+
+mark {
+    background-color: #ADD8E6;
+    padding: 5px;
+}
+
+img {
+    max-width: 100%;
+}
+```
+
+
 ```{r}
-library(magick)
-
-# create with this code
-
-my_meme <-image_read("https://cataas.com/cat") %>%
-  image_annotate("What you looking at?", 
-                 font="Impact", 
-                 size=100)%>%
-  image_scale(500)
-
-image_write(my_meme, "my_meme.png")
-
+feedback_data <- read_csv("https://docs.google.com/spreadsheets/d/e/2PACX-1vS2BFaKXklT874PtU-CxpSE5pt9veaTWrwrBoNJH_fzdqgQu4u6hrMZDe2Wzy5yJMbA5wUtWsdx6Vy1/pub?gid=1248865192&single=true&output=csv") %>%
+    rename(timestamp = 1,
+           feedback = 2,
+           lab_task = 3)
 ```
+
+## What do students think about the STATS 220 labs?
+
+![](https://media.tenor.com/gQf-Nf3he8cAAAAM/cat-typing.gif)
+
+### How many comments per lab?
+
 ```{r}
-Sys.setenv(PEXELS_KEY = "lIAuQtsixxJfacvQSk45XhgymYu7lzIU7JrJQFxrKVP36TUdMNWOhi66")
-
+feedback_data %>%
+    ggplot() +
+    geom_bar(aes(y = lab_task)) +
+    labs(title = "Number of feedback comments for each lab task",
+         subtitle = "STATS 220 Semester One 2025",
+         caption = "Source: Anna's Google form",
+         x = "Number of students",
+         y = "Lab task")
 ```
+### How much do students write?
+
 ```{r}
-key <- Sys.getenv("PEXELS_KEY")
-
+median_length_feedback <- feedback_data$feedback %>% 
+  nchar() %>% 
+  median()
 ```
+
+The median number of characters used across the feedback comments is `r  median_length_feedback`.
+
+### What are the 10 top words used?
+
+> Note the rest of this report goes beyond what you have learned in Modules 1 and 2 - spoiler alert for Modules 3 and 4.
+
 ```{r}
-library(httr)
-library(jsonlite)
+feedback_words <- feedback_data %>%
+  # clean up the comment
+  mutate(word = feedback %>% 
+           str_remove_all("[:punct:]") %>%   
+           str_to_lower() %>%
+           str_squish()) %>%
+  # create one row per word used
+  separate_rows(word, sep = " ") %>%
+  # count how many times each word used
+  # sort in order of highest count first
+  count(word, sort = TRUE) %>%
+  # remove stop words
+  anti_join(stop_words) %>%
+  # remove "lab" "task"
+  filter(!str_detect(word, "lab|task")) %>%
+  # keep top 20
+  slice(1 : 20)
 
+# make bar chart
+ggplot(data = feedback_words) +
+  geom_col(aes(y = reorder(word, n),
+               x = n,
+               fill = word)) +
+  labs(y = "Word",
+       x = "Number of students",
+       title = "Top 20 words used by students in feedback comments for lab tasks",
+       subtitle = "STATS 220 Semester One",
+       caption = "Source: Anna's Google form") +
+  theme_minimal() +
+  guides(fill = "none")
 ```
+
+
+### Which comments were the most positive?
+
 ```{r}
-key <- Sys.getenv("PEXELS_KEY")
-
-url <- "https://api.pexels.com/v1/search?query=cat&per_page=1"
-
-response <- GET(
-  url,
-  add_headers(Authorization = key)
-)
-
-data <- fromJSON(content(response, "text"))
-response$status_code
-key
-str(data)
-names(data)
-
-
-image_url <- data$photos$src$medium[1]
-image_url
-
-
-
+feedback_sentiment <- feedback_data %>%
+  # clean up the comment
+  mutate(word = feedback %>% 
+           str_remove_all("[:punct:]") %>% 
+           str_to_lower() %>%
+           str_squish()) %>%
+  # create one row per word used
+  separate_rows(word, sep = " ") %>%
+  anti_join(stop_words) %>%
+  inner_join(sentiments) %>%
+  group_by(feedback, lab_task, sentiment) %>%
+  summarise(num_words = n()) %>%
+  pivot_wider(names_from = sentiment,
+              values_from = num_words) %>%
+  arrange(desc(positive)) %>%
+  filter(is.na(negative) & !is.na(positive))
 ```
-```{r}
-library(magick)
-image_read(image_url)
+
+😀 `r feedback_sentiment$feedback[1]` 😀
+
+😀 `r feedback_sentiment$feedback[2]` 😀
+
+😀 `r feedback_sentiment$feedback[3]` 😀
+
+😀 `r feedback_sentiment$feedback[4]` 😀
+
+😀 `r feedback_sentiment$feedback[5]` 😀
 
 
-```
-```{r}
-url="https://smarty.online/scripts/s124/yden299
-image_read(url)
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
 
 
 
